QA Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Cost_Per_Mile__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Mile__c</fullName>
    <label>Cost Per Mile</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>