QA Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Distance_travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_travelled__c</fullName>
    <label>Distance travelled</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>