QA Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/invoice__c.field-meta.xml
<CustomField>
    <fullName>invoice__c</fullName>
    <label>invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>