QA Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Total Cost</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>