QA Project/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <description>Used to create service line items</description>
    <label>Services</label>
</RecordType>