QA Project/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Substinence.recordType-meta.xml
<RecordType>
    <fullName>Substinence</fullName>
    <active>true</active>
    <label>Substinence</label>
</RecordType>