QA Project/force-app/main/default/objects/Invoice_Line_Item__c/listViews/Mary_s_Invoice_items.listView-meta.xml
<ListView>
    <fullName>Mary_s_Invoice_items</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Mary&apos;s Invoice items</label>
    <sharedTo>
        <role>Instructor</role>
    </sharedTo>
</ListView>